fixing wow visiblitiy css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1531,9 +1531,4 @@ h4.gallery {
   	margin: 0 0 22px 0;
 }
 
-/* breaks display on mobile
-
-.wow {
-   visibility: hidden;
-}
-*/
+/* breaks display on mobile */
